# mosaic

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.py
demo/: exit-stack-demo.py
mosaic/: __init__.py  cli.py  utils.py
mosaic/free/: __init__.py  args.py
mosaic/free/cleaner/: __init__.py  clean.py  combine.py  combiner.py  constants.py  extract.py  io.py  packer.py  processor.py  runmodel.py  split.py  splitter.py
mosaic/free/cleaner/processor/: __init__.py  position.py  remove.py  replace.py  utils.py
mosaic/free/net/: model_util.py  utils.py
mosaic/free/utils/: __init__.py  clean_cache.py  data.py  ffmpeg.py  image_processing.py
mosaic/free_old/: README.md  __init__.py
mosaic/free_old/cleaner/: __init__.py  clean.py  combine.py  extract.py  runmodel.py  split.py
mosaic/free_old/utils/: __init__.py  data.py  dataloader.py
mosaic/jobs/: __init__.py  clean.py  create.py  delete.py  job.py  ls.py  manager.py  menu.py  utils.py
mosaic/jobs/job/: __init__.py  base.py  checklist.py  copy.py  free.py  lada.py  upscale.py  utils.py
mosaic/lada/: __init__.py  args.py
mosaic/lada/cleaner/: __init__.py
mosaic/remove/: __init__.py  command.py
mosaic/upscale/: __init__.py  args.py  filter.py
mosaic/upscale/net/: __init__.py  real_esrgan.py  rrdb_net.py
mosaic/upscale/upscaler/: __init__.py  combiner.py  processor.py  spec.py  splitter.py
mosaic/utils/: __init__.py  exception.py  ffmpeg.py  ffprobe.py  logging.py  path.py  progress.py  service.py  spec.py  time.py
tests/: test_init.py
tests/utils/: test_progress.py
(+17 files in other folders)
